--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
     
   	
 <div id="container" style=" width: 578px;
-    background-image: url('grid.png'); background: #1E7188;"></div> 
+    background-image: url('http://demo.engineerinme.com/static/images/grid.png'); background: #1E7188;"></div> 
        <script src="{{u2}}"></script>
     <script defer="defer">
 
